--- a/index.html
+++ b/index.html
@@ -997,7 +997,9 @@ footer strong { color: var(--accent); }
 <div class="toast" id="toast"></div>
 
 <footer>
-  Built with ❤️ by <strong>Julius</strong> &nbsp;·&nbsp; SpinCrew © 2024
+  <footer>
+  A SpinCrew Project · © 2026
+</footer>
 </footer>
 
 <script>
