--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@ footer strong { color: var(--accent); }
 
 <footer>
   <footer>
-  A SpinCrew Project · © 2026
+  A Lius Creative Project · © 2026
 </footer>
 </footer>
 
